As a registered user, I want to log in to the platform, so that I can access my account and use its features and services [Delivers #184447251]
