# routes/routing.js
@@ -13,7 +13,16 @@ router.get('/users', (req, res) => {
 });
 router.post('/users', userController.register);
 
-router.get('/end-session', (req, res) => {
+router.get('/sessions', (req, res) => {
+    if(req.session.user) {
+        res.redirect('/');
+    } else {
+        res.render('sessions');
+    }
+});
+router.post('/sessions', userController.login);
+
+router.get('/delete-sessions', (req, res) => {
     req.session.destroy();
     res.redirect('/');
 });
